ucze sie zapisywac commity

--- a/skin/frontend/rwd/default/css/styles.css
+++ b/skin/frontend/rwd/default/css/styles.css
@@ -10600,3 +10600,9 @@ div.calendar table td.button {
   color: inherit;
   text-transform: none;
 }
+
+.logo{
+float:right;
+}
+
+/* kurwa co jest */
